fix: modify comment

--- a/perceptron/perceptron_duality.ipynb
+++ b/perceptron/perceptron_duality.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "\"\"\"\n",
-    "@description: 感知机对偶实现\n",
+    "@description: 感知机对偶形式的实现\n",
     "@author: Zhao Chengcheng\n",
     "@date: 2020-11-2 9:38\n",
     "\"\"\"\n",
@@ -24,7 +24,7 @@
     "def get_data(num):\n",
     "    data = [] # 数据\n",
     "    label = [] # 标签\n",
-    "    x1 = np.random.normal(2, 0.8, num) # 反例\n",
+    "    x1 = np.random.normal(2, 0.8, num) # 反例,生成 num / 2 个点 \n",
     "    x2 = np.random.normal(6, 0.8, num) # 正例\n",
     "    for i in range(0, num, 2):\n",
     "        data.append([x1[i], x1[i + 1]])\n",
@@ -49,7 +49,7 @@
     "    @return slope:斜率\n",
     "    @return intercept: 截距\n",
     "    \"\"\"\n",
-    "    G = np.zeros([len(data), len(data)])\n",
+    "    G = np.zeros([len(data), len(data)])    # Gram 矩阵\n",
     "    α = np.zeros(len(data))\n",
     "    b = 0\n",
     "    for i in range(0, len(data)):\n",
