--- a/perceptron/perceptron_duality.ipynb
+++ b/perceptron/perceptron_duality.ipynb
@@ -22,6 +22,12 @@
    "outputs": [],
    "source": [
     "def get_data(num):\n",
+    "    \"\"\"\n",
+    "    @description: 生成数据(点)\n",
+    "    @param num: 生成点的个数\n",
+    "    @return data: 生成的点 [(x0, y0), (x1, y1), ……]\n",
+    "    @return label: 点的标签，-1 或 +1\n",
+    "    \"\"\"\n",
     "    data = [] # 数据\n",
     "    label = [] # 标签\n",
     "    x1 = np.random.normal(2, 0.8, num) # 反例,生成 num / 2 个点 \n",
@@ -50,28 +56,28 @@
     "    @return intercept: 截距\n",
     "    \"\"\"\n",
     "    G = np.zeros([len(data), len(data)])    # Gram 矩阵\n",
-    "    α = np.zeros(len(data))\n",
+    "    α = np.zeros(len(data)) # \n",
     "    b = 0\n",
     "    for i in range(0, len(data)):\n",
     "        for j in range(0, len(data)):\n",
-    "            G[i][j] = data[i][0] * data[j][0] + data[i][1] * data[j][1]\n",
-    "    separated = False\n",
+    "            G[i][j] = data[i][0] * data[j][0] + data[i][1] * data[j][1] # 计算 Gram 矩阵\n",
+    "    separated = False   # 标记是否完全分离\n",
     "    while not separated:\n",
     "        separated = True\n",
-    "        for i in range(0, len(data)):\n",
+    "        for i in range(0, len(data)):   # 遍历训练集，每次取出点 (data[i][0], data[i][1])\n",
     "            sum = 0\n",
-    "            for j in range(0, len(data)):\n",
+    "            for j in range(0, len(data)):   # 计算 ∑(α*yj*xj)的值，相当于原始形式中的 w\n",
     "                sum += α[j] * label[j] * G[j][i]\n",
-    "            if (sum + b) * label[i] <= 0:\n",
-    "                α[i] += eta\n",
-    "                b += eta * label[i]\n",
-    "                separated = False\n",
-    "    w = [0., 0.]\n",
-    "    for i in range(0, len(α)):\n",
+    "            if (sum + b) * label[i] <= 0:   # 该点没有分离\n",
+    "                α[i] += eta # 更新 α 的值\n",
+    "                b += eta * label[i] # 更新 b 的值\n",
+    "                separated = False # 置回标记\n",
+    "    w = [0., 0.]    # w[0] * x + w[1] * y + b = 0\n",
+    "    for i in range(0, len(α)): # 求出 w 的值\n",
     "        w[0] += α[i] * label[i] * data[i][0]\n",
     "        w[1] += α[i] * label[i] * data[i][1]\n",
-    "    slope = -w[0] / w[1]\n",
-    "    intercept = -b / w[1]\n",
+    "    slope = -w[0] / w[1]    # 斜率\n",
+    "    intercept = -b / w[1]   # 截距\n",
     "    return slope, intercept"
    ]
   },
